# Darwin

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  small.yaml
darwin/: __init__.py  cli.py
darwin/agents/: __init__.py  art_agent.py  base.py  code_agent.py  prompting_agent.py  research_agent.py  video_agent.py
darwin/api/: __init__.py  ui.py
darwin/core/: __init__.py  config.py  llm.py  model.py  tokenizer.py  trainer.py
darwin/evaluation/: benchmarks.py  metrics.py  training_progress.py
darwin/governance/: __init__.py  checkpoint.py  review_gate.py  sandbox.py
darwin/improvement/: __init__.py  loop.py
darwin/knowledge/: __init__.py  base.py  index.py  ingestor.py  retriever.py
darwin/orchestrator/: brain.py  fusion.py  orchestrator.py  scheduler.py
data/: tokenizer.json
data/checkpoints/: registry.json
data/checkpoints/cycle_0001/: meta.json
data/checkpoints/cycle_0002/: meta.json
data/checkpoints/cycle_0003/: meta.json
data/checkpoints/cycle_0004/: meta.json  model.pt
data/checkpoints/cycle_0005/: meta.json
data/logs/: advisory_proposals.jsonl  metrics.jsonl
data/reviews/: decisions.jsonl
scripts/: backup_training.ps1  bootstrap.py
tests/: __init__.py  test_agents.py  test_api_ui.py  test_brain.py  test_governance.py  test_knowledge.py  test_model.py  test_tokenizer.py
